--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.2",
     "sweetalert2": "^11.14.3"
